v0.14.0/_sources/projections/misc/misc_winkel_tripel.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_winkel_tripel.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_misc_misc_winkel_tripel.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_winkel_tripel.py:


Winkel Tripel projection
========================

In 1921, the German mathematician Oswald Winkel made a projection that was to
strike a compromise between the properties of three elements (area, angle and
distance). The German word "tripel" refers to this junction of where each of
these elements are least distorted when plotting global maps. The projection
was popularized when Bartholomew and Son started to use it in its
world-renowned "The Times Atlas of the World" in the mid-20th century. In 1998,
the National Geographic Society made the Winkel Tripel as its map projection of
choice for global maps.

Naturally, this projection is neither conformal, nor equal-area. Central
meridian and equator are straight lines; other parallels and meridians are
curved. The projection is obtained by averaging the coordinates of the
Equidistant Cylindrical and Aitoff (not Hammer-Aitoff) projections. The poles
map into straight lines 0.4 times the length of equator.

**r**\ [*lon0/*]\ *scale* or **R**\ [*lon0/*]\ *width*

The projection is set with **r** or **R**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 27-33



.. image-sg:: /projections/misc/images/sphx_glr_misc_winkel_tripel_001.png
   :alt: misc winkel tripel
   :srcset: /projections/misc/images/sphx_glr_misc_winkel_tripel_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="R12c", frame="afg", land="ivory", water="bisque4")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.245 seconds)


.. _sphx_glr_download_projections_misc_misc_winkel_tripel.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: misc_winkel_tripel.ipynb <misc_winkel_tripel.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: misc_winkel_tripel.py <misc_winkel_tripel.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: misc_winkel_tripel.zip <misc_winkel_tripel.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
